Optimize for Vercel deployment - Updated vercel.json and added deployment guide

--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,32 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "server/server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js"
+      "dest": "/server/server.js"
     },
     {
       "src": "/(.*)",
       "dest": "/index.html"
     }
   ],
+  "functions": {
+    "server/server.js": {
+      "includeFiles": "server/**"
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
