--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "npm run build && npm run start:server",
     "start:server": "cd server && npm start",
     "install:server": "cd server && npm install",
+    "vercel-build": "npm run build",
     "deploy": "npm run build && npm run install:server"
   },
   "dependencies": {
